# nxn

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
cli/: Cargo.toml
cli/src/: main.rs
crypto/: Cargo.toml
crypto/src/: lib.rs  rng.rs  safe.rs
store/: Cargo.toml
store/src/: arr.rs  err.rs  gen.rs  key.rs  lib.rs
