[package]
name = "nxn-crypto"
version = "0.1.0"
authors = ["4meta5 <asinghchrony@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.7.0", features = ["unstable"]}
bip39 = "1.0.0-rc1"
generic-array = "0.14.4"
parity-scale-codec = "1.3.5"
rand = "0.7.3"
secrecy = "0.7.0"
strobe-rs = "0.6.2"
zeroize = "1.1"
subtle = "2.3.0"
