[package]
name = "nxn-store"
version = "0.1.0"
authors = ["4meta5 <asinghchrony@protonmail.com>"]
edition = "2018"
description = "password authenticated storage"

[dependencies]
aes-gcm-siv = { version = "0.8", features = ["std"] }
anyhow = "1.0.35"
async-std = {version = "1.7.0", features = ["unstable","attributes"]}
bip39 = "1.0.0-rc1"
gen = {package = "nxn-gen",path = "../gen"}
generic-array = "0.14.4"
parity-scale-codec = "1.3.5"
rand = "0.7.3"
secrecy = "0.7.0"
strobe-rs = "0.6.2"
subtle = "2.3.0"
thiserror = "1.0.22"
x25519-dalek = "1.1"
zeroize = "1.1"
sled = "0.34.6"
